--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
       <body> 
     <header>
 
-        <nav class="navbar navbar-default navbar-fixed-top" role="naviagation">
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="navbar-collapse-main">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-main">
                         <span class="sr-only">Toogle Navigation</span>
                         <span class="icon-bar"> </span>
                         <span class="icon-bar"> </span>
@@ -35,7 +35,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Dashboard </a></li>
-                            <li><a href="#">Profile</a></li>
+           
                             <li><a href="#">Login</a></li>
                             <li><a href="#">logout</a></li>
                         </ul>
